--- a/code.html
+++ b/code.html
@@ -14,14 +14,13 @@ var editboxHTML =
 'html,body { overflow: hidden; }' +
 '<\/style>' +
 '<\/head>' +
-'<body class="expand close" document.f.ta.select();">' +
+'<body class="expand close">' +
 '<form class="expand close" name="f">' +
 '<textarea class="expand close" style="background: #222;" name="ta" wrap="hard" spellcheck="false">' +
 '<\/textarea>' +
 '<\/form>' +
 '<\/body>' +
 '<\/html>';
-// The "\n\n\n\n" codes in the "iframe" code are there to increase space for easily pasting URLs.
 var defaultStuff = '';
 var extraStuff = '<div style="position:absolute; margin:0em; bottom:0em; right:0em;"><small>\n  <\/a>.\n<\/small><\/div>';
 var old = '';      
