--- a/code.html
+++ b/code.html
@@ -1,3 +1,68 @@
+<!--  VID Website Editor.  -->
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Nihar's Webpage Editor</title>
+<script type="text/javascript">
+var editboxHTML = 
+'<html class="expand close">' +
+'<head>' +
+'<style type="text/css">' +
+'.expand { width: 100%; height: 100%; }' +
+'.close { border: none; font-size: 100%; color: #fff; margin: 0px; padding: 0px; }' +
+'html,body { overflow: hidden; }' +
+'<\/style>' +
+'<\/head>' +
+'<body class="expand close" onload="document.f.ta.focus(); document.f.ta.select();">' +
+'<form class="expand close" name="f">' +
+'<textarea class="expand close" style="background: #222;" name="ta" wrap="hard" spellcheck="false">' +
+'<\/textarea>' +
+'<\/form>' +
+'<\/body>' +
+'<\/html>';
+var defaultStuff = '';
+var extraStuff = '<div style="position:absolute; margin:0em; bottom:0em; right:0em;"><small>\n  <\/a>.\n<\/small><\/div>';
+var old = '';      
+
+function init() {
+  // Fetch the HTML content of the website and set it as defaultStuff.
+  fetch('https://1nrp.github.io/vid')
+    .then(response => response.text())
+    .then(data => {
+      defaultStuff = data;
+      // Initialize the editbox with the fetched content
+      window.editbox.document.write(editboxHTML);
+      window.editbox.document.close();
+      window.editbox.document.f.ta.value = defaultStuff;
+      update();
+    })
+    .catch(error => {
+      console.error('Error fetching content:', error);
+    });
+}
+function update() {
+  var textarea = window.editbox.document.f.ta;
+  var d = dynamicframe.document; 
+  if (old != textarea.value) {
+    old = textarea.value;
+    d.open();
+    d.write(old);
+    if (old.replace(/[\r\n]/g,'') == defaultStuff.replace(/[\r\n]/g,''))
+      d.write(extraStuff);
+    d.close();
+  }
+  window.setTimeout(update, 1000);
+}
+</script>
+</head>
+<frameset resizable="yes" rows="60%,*" onload="init();">
+  <frame name="editbox" src="javascript:'';">
+  <frame name="dynamicframe" src="javascript:'';">
+</frameset>
+</html>
+
+<!--  Clear canvas without any pre-existing text in the Editor.
 <!DOCTYPE html>
 <html>
 <head>
@@ -52,12 +117,11 @@ function update()
 </script>
 </head>
 <frameset resizable="yes" rows="60%,*" onload="init();">
-  <!-- about:blank confuses opera, so use javascript: URLs instead -->
   <frame name="editbox" src="javascript:'';">
   <frame name="dynamicframe" src="javascript:'';">
 </frameset>
 </html>
-
+-->
 
 <!--  Includes Iframe option on loading.
 <!DOCTYPE html>
