--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <p><a href="hls">HLS Player For PC</a></p>
     <p><a href="note">View Cloud Notes</a></p>
     <p><a href="offnote">Offline Notes</a><p>
-    <p><a href="https://1msg.vercel.app">Cloud Notes</a></p>
+    <p><a href="https://1msg-bq1zepmxs-1nrp.vercel.app">Cloud Notes</a></p>
     <p><a href="text">Text Reader</a></p>
     <p><a href="https://1nrp.github.io/vid" style="background-color: #000; padding: 20px 60px"></a></p>
     
