--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
     }
 
     a:hover {
-      background-color: dodgerblue;  
+      background-color: #26666662;
     }
     h2 {
-      color: #349998;
+      color: #04c9c5;
       font-size: 30px;
-      font-weight: 100;
+      font-weight: 1000;
     }
 </style>
 
@@ -38,11 +38,9 @@
     
     <h2>WEBPAGE LINKS</h2>
     <p><a href="code">Live Page Source Code Editor</a></p>
-    <p><a href="1msg">Cloud Notes (GH Pages)</a></p>
     <p><a href="hls">HLS Player For PC</a></p>
-    <p><a href="note">View Cloud Notes</a></p>
     <p><a href="offnote">Offline Notes</a><p>
-    <p><a href="https://1msg-bq1zepmxs-1nrp.vercel.app">Cloud Notes</a></p>
+    <p><a href="https://1nrp.vercel.app">Cloud Notes</a></p>
     <p><a href="text">Text Reader</a></p>
     <p><a href="https://1nrp.github.io/vid" style="background-color: #000; padding: 20px 60px"></a></p>
     
