--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
     display: inline-block;
     }
     a:hover {
-      background-color: #26666662;
+      background-color: #46666664;
     }
     h2 {
       color: #04c9c5;
       font-size: 30px;
       font-weight: 800;
+      font-family: fantasy, arial, sans-serif;
     }
 </style>
 
