--- a/code1.html
+++ b/code1.html
@@ -54,7 +54,7 @@ function update() {
 
 function vertical() {
   const frameset = document.getElementsByTagName('frameset')[0];
-  frameset.setAttribute('rows', '*, 50%');
+  frameset.setAttribute('cols', '*, 50%');
 }
 
 </script>
