--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <center>
     
     <h2>WEBPAGE LINKS</h2>
-    <p><a href="code">Live Page Source Code Editor</a></p>
+    <a href="code">HTML (H)</a> <a href="code-vertical">HTML (V)</a>
     <p><a href="hls">HLS Player For PC</a></p>
     <p><a href="offnote">Offline Notes</a><p>
     <p><a href="https://1nrp.vercel.app">Cloud Notes</a></p>
