--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <a href="code">HTML (H)</a> <a href="code-vertical">HTML (V)</a>
     <p><a href="hls">HLS Player For PC</a></p>
     <p><a href="offnote">Offline Notes</a><p>
-    <p><a href="https://1nrp.vercel.app" target="_blank">Cloud Notes</a></p>
+    <p><a href="https://1nrp.vercel.app" target="_sel">Cloud Notes</a></p>
     <p><a href="text">Text Reader</a></p>
     <p><a href="https://1nrp.github.io/vid" style="background-color: #000; padding: 20px 60px"></a></p>
     
