--- a/code.html
+++ b/code.html
@@ -75,12 +75,15 @@ function update() {
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Nihar's Webpage Editor</title>
-  <!-- Prism CSS -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism.min.css" rel="stylesheet" />
-  <!-- Prism JS -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js"></script>
-  <!-- Prism Language CSS -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-html.min.css" rel="stylesheet" />
+  <!-- CodeMirror CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.3/codemirror.min.css">
+  <!-- CodeMirror Theme -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.3/theme/dracula.min.css">
+  <!-- CodeMirror JS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.3/codemirror.min.js"></script>
+  <!-- CodeMirror Mode for HTML -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.3/mode/xml/xml.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.3/mode/htmlmixed/htmlmixed.min.js"></script>
   
   <script type="text/javascript">
     var editboxHTML = 
@@ -90,17 +93,16 @@ function update() {
     '.expand { width: 100%; height: 100%; }' +
     '.close { border: none; font-size: 100%; color: #fff; margin: 0px; padding: 0px; }' +
     'html,body { overflow: hidden; }' +
-    '.code { background: #222; color: #fff; padding: 10px; border-radius: 5px; }' +
     '</style>' +
     '</head>' +
-    '<body class="expand close" onload="document.f.ta.focus(); document.f.ta.select();">' +
+    '<body class="expand close" onload="initializeEditor();">' +
     '<form class="expand close" name="f">' +
-    '<textarea class="expand close code" name="ta" wrap="hard" spellcheck="false"></textarea>' +
+    '<textarea id="code" name="ta" wrap="hard" spellcheck="false"></textarea>' +
     '</form>' +
     '</body>' +
     '</html>';
     var defaultValue = '';
-    var old = '';      
+    var old = '';
 
     function init() {
       var URL = prompt("Enter URL To Fetch HTML Code Of:", "https://");
@@ -109,6 +111,7 @@ function update() {
           .then(response => response.text())
           .then(data => {
             defaultValue = data;
+            window.editbox.document.open();
             window.editbox.document.write(editboxHTML);
             window.editbox.document.close();
             window.editbox.document.f.ta.value = defaultValue;
@@ -118,6 +121,7 @@ function update() {
             console.error('Error fetching source code of the URL:', error);
           });
       } else {
+        window.editbox.document.open();
         window.editbox.document.write(editboxHTML);
         window.editbox.document.close();
         window.editbox.document.f.ta.value = defaultValue;
@@ -125,20 +129,30 @@ function update() {
       }
     }
 
-    function update() {
-  var textarea = window.editbox.document.f.ta;
-  var d = dynamicframe.document; 
-  if (old != textarea.value) {
-    old = textarea.value;
-    d.open();
-    d.write('<html><head><link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism.min.css" rel="stylesheet" /></head><body><pre><code class="language-html">');
-    d.write(Prism.highlight(old, Prism.languages.html, 'html'));
-    d.write('</code></pre></body></html>');
-    d.close();
-  }
-  window.setTimeout(update, 1000);
-}
+    function initializeEditor() {
+      var editor = CodeMirror.fromTextArea(window.editbox.document.getElementById('code'), {
+        mode: 'htmlmixed',
+        theme: 'dracula',
+        lineNumbers: true,
+        matchBrackets: true
+      });
+      editor.on('change', function() {
+        update();
+      });
+    }
 
+    function update() {
+      var editor = CodeMirror.getDoc(window.editbox.document.getElementById('code'));
+      var code = editor.getValue();
+      var d = dynamicframe.document;
+      if (old !== code) {
+        old = code;
+        d.open();
+        d.write('<html><head></head><body>' + code + '</body></html>');
+        d.close();
+      }
+      window.setTimeout(update, 1000);
+    }
   </script>
 </head>
 <frameset resizable="yes" rows="60%,*" onload="init();">
