--- a/code.html
+++ b/code.html
@@ -1,5 +1,5 @@
 
-<!--  Website Editor With URL-Source-Code Fetching Functionality. 
+<!--  Website Editor With URL-Source-Code Fetching Functionality. -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -70,7 +70,7 @@ function update() {
   <frame name="dynamicframe" src="javascript:'';">
 </frameset>
 </html>
-
+<!--
 <!DOCTYPE html>
 <html>
 <head>
@@ -163,6 +163,7 @@ function update() {
 </body>
 </html>
 -->
+<!--
 <!DOCTYPE html>
 <html>
 <head>
@@ -238,7 +239,7 @@ function update() {
   <frame name="dynamicframe" src="javascript:'';">
 </frameset>
 </html>
-
+-->
 <!--  Includes Iframe option on loading.
 <!DOCTYPE html>
 <html>
